BuildRequestAlternativesIterator